refactor: LottoNumber 클래스 생성 및 List -> Set으로 변경